# TKOM

./: CMakeLists.txt  Makefile  TokenType.h  build.sh  lexer.l  main.cc
Tests/: tests.cc
